# ProgramacionEstructurada

./: CMakeLists.txt  README.md  main.c
Ej1/: estructura.c  estructura.h
Ej2/: union.c  union.h
Ej3/: copiaEstructura.c  copiaEstructura.h
Ej4/: aliasEstructura.h
Ej5/: estructFun.c  estructFun.h
